Added react footer

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,12 @@
 {
-  "extends": [
-    "react-important-stuff",
-    "plugin:prettier/recommended"
-  ],
-  "parser": "@babel/eslint-parser"
+  "extends": ["react-important-stuff", "plugin:prettier/recommended"],
+  "parser": "@babel/eslint-parser",
+  "rules": {
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
+  }
 }
